tests/reference/asr-test_assign3-cc6fc9d.stderr
semantic error: Type mismatch in assignment, the types must be compatible
 --> tests/errors/test_assign3.py:6:5
  |
6 |     a = b
  |     ^   ^ type mismatch ('list[i32]' and 'set[i32]')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
